# FastFlowLM

./: .gitignore  README.md
.github/workflows/: debian-portable.yml  mirror-releases.yml  pages.yml
docs/: _config.yml  benchmarks.md  demos.md  index.md  linux-getting-started.md  news.md
docs/_includes/: hero-home.html
docs/docs/: index.md  install_lin.md
docs/docs/benchmarks/: gemma4_results.md
docs/docs/instructions/: cli.md
docs/docs/models/: embeddinggemma.md  gemma.md  qwen.md
src/: CMakeLists.txt  CMakePresets.json  model_list.json
src/common/: utils.cpp
src/common/AutoModel/: automodel.cpp  modeling_gemma3.cpp  modeling_gemma3_text.cpp  modeling_gemma4e.cpp  modeling_gemma4e_audio.cpp  modeling_gpt_oss.cpp  modeling_lfm2.cpp  modeling_llama3.cpp  modeling_nanbeige.cpp  modeling_phi4.cpp  modeling_qwen2.cpp  modeling_qwen2vl.cpp  modeling_qwen2vl_image.cpp  modeling_qwen3.cpp  modeling_qwen3_5_omni.cpp  modeling_qwen3_5_omni_audio.cpp  modeling_qwen3_5_omni_image.cpp  modeling_qwen3_5vl.cpp  modeling_qwen3_5vl_image.cpp  modeling_qwen3_6_moe.cpp  modeling_qwen3_6_moe_image.cpp  modeling_qwen3vl.cpp  modeling_qwen3vl_image.cpp
src/common/audio_process_utils/: audioproc.cpp  audioprocAVX512.cpp
src/include/: lm_config.hpp  prompt_cache.hpp
src/include/AutoModel/: all_models.hpp  automodel.hpp  modeling_gemma3.hpp  modeling_gemma3_text.hpp  modeling_gemma4e.hpp  modeling_gpt_oss.hpp  modeling_lfm2.hpp  modeling_llama3.hpp  modeling_qwen2.hpp  modeling_qwen2vl.hpp  (+5 more)
src/inno/: flm.iss
src/lib/: dequant.lib  dequant_new.lib  gemm.lib  gemma4e_npu.lib  gemma_embedding.lib  gemma_npu.lib  gemma_text_npu.lib  gpt_oss_npu.lib  lfm2_npu.lib  llama_npu.lib  lm_head.lib  mha.lib  nanbeige_npu.lib  phi4_npu.lib  qwen2_npu.lib  qwen2vl_npu.lib  qwen3_5_omni_npu.lib  qwen3_5vl_npu.lib  qwen3_npu.lib  qwen3vl_npu.lib  whisper_npu.lib
src/pull/: download_model.cpp  download_model.hpp  model_downloader.cpp  model_downloader.hpp
src/runner/: runner.cpp  runner.hpp
src/server/: rest_handler.cpp  server.cpp  server.hpp  streaming_ostream_openai.hpp
src/src/: main.cpp
src/test/qwen3_5_omni_npu/: CMakeLists.txt  Makefile  activate.sh  test.cpp
static/: _config.yml  benchmarks.md  community.md  demos.md  docs.md  how-it-works.md  index.md  models.md  news.md  roadmap.md  script.js  team.md  testimonials.md
static/_includes/: footer.html
static/assets/: styles.css
(+105 files in other folders)
